Replace certmanager.k8s.io with cert-manager.io
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/design/20190708.certificate-request-crd.md
+++ b/design/20190708.certificate-request-crd.md
@@ -105,7 +105,7 @@ same code base and repository.
 ### API Changes
 
 This proposal will create the following new API types in the
-`certmanager.k8s.io` group;
+`cert-manager.io` group;
 
 ```golang
 // CertificateRequestSpec defines the desired state of CertificateRequest
@@ -120,7 +120,7 @@ type CertificateRequestSpec struct {
 	// used.  If the 'kind' field is set to 'ClusterIssuer', a ClusterIssuer with
 	// the provided name will be used. The 'name' field in this stanza is
 	// required at all times. The group field refers to the API group of the
-	// issuer which defaults to 'certmanager.k8s.io' if empty.
+	// issuer which defaults to 'cert-manager.io' if empty.
 	IssuerRef ObjectReference `json:"issuerRef"`
 
 	// Byte slice containing the PEM encoded CertificateSigningRequest
@@ -227,7 +227,7 @@ name.
 ### Internal API Resource Behaviour
 
 The group name of `IssuerRef` inside `CertificateRequest`s is to be defaulted
-to "certmanager.k8s.io" if the field is empty, using a mutating webhook. This
+to "cert-manager.io" if the field is empty, using a mutating webhook. This
 means that if unspecified, `CertificateRequest` objects will be put into the
 ownership of the default pool of issuers in the cert-manager project.
 
@@ -243,7 +243,7 @@ value pairs. These annotations should be considered optional. Any
 fallback gracefully or be marked as failed in the event a required annotation is
 missing. The currently defined annotations are:
 
-- `certmanager.k8s.io/private-key-secret-name`: The name of the secret, in the
+- `cert-manager.io/private-key-secret-name`: The name of the secret, in the
   same namespace as the `CertificateRequest`, that stores the private key which
   was used to sign the x509 certificate signing request. This is required by the
   `SelfSigning` issuer to sign its own certificate. If this annotation is missing
