--- a/docs/tasks/issuers/setup-acme/dns01/rfc2136.rst
+++ b/docs/tasks/issuers/setup-acme/dns01/rfc2136.rst
@@ -118,7 +118,7 @@ sufficiently, let’s focus on the provider here.
 .. code:: yaml
    :emphasize-lines: 10-16
 
-   apiVersion: certmanager.k8s.io/v1alpha1
+   apiVersion: cert-manager.io/v1alpha1
    kind: Issuer
    metadata:
      name: example-issuer
