--- a/design/20210203.certificate-request-identity.md
+++ b/design/20210203.certificate-request-identity.md
@@ -54,7 +54,7 @@ configuring auditing is available, it is often not preferable and an
 anti-pattern to make runtime decisions on historical audit logs.
 
 The upstream [Kubernetes certificates
-`CertificateSigningRequest`](https://github.com/kubernetes/api/blob/master/certificates/v1/types.go#L41)
+`CertificateSigningRequest`](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.20/#certificatesigningrequest-v1-certificates-k8s-io)
 API has identity as part of the resource. As the project intends to align and
 likely make this resource compatible with cert-manager in some way, the
 `CertificateRequest` should expose identical identity details. This means
