--- a/design/20210203.certificate-request-identity.md
+++ b/design/20210203.certificate-request-identity.md
@@ -89,7 +89,7 @@ The webhook will be responsible for enforcing the following during a CREATE
 operation:
 - No identity fields have been set by the user creating the resource
 - Set identity fields to exactly what is received from the API server in the
-    [UserInfo](https://github.com/kubernetes/api/blob/master/authentication/v1/types.go#L102)
+    [UserInfo](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.20/#userinfo-v1-authentication-k8s-io)
 
 The webhook will also responsible for enforcing the following during an UPDATE
 operation:
