Makes allowedIssuers a slice, and updates user story example to include this
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20210302.certificate-request-policy.md
+++ b/design/20210302.certificate-request-policy.md
@@ -108,7 +108,7 @@ type CertificateRequestPolicy struct {
 
     Spec CertificatePolicySpec `json:"spec"`
 
-	  // +optional
+    // +optional
     Status CertificatePolicyStatus `json:"status"`
 }
 
@@ -120,85 +120,85 @@ type CertificateRequestPolicyList struct {
 }
 
 type CertificateRequestPolicySpec struct {
-	  // +optional
+    // +optional
     AllowedSubject *PolicyX509Subject `json:"allowedSubject,omitempty"`
 
-	  // +optional
+    // +optional
     AllowedCommonName *string `json:"subject,omitempty"`
 
     // Values are inclusive (i.e. a min value with 50s will accept a duration
     // with 50s). MinDuration and MaxDuration may be the same.
-	  // +optional
+    // +optional
     MinDuration *metav1.Duration `json:"minDuration,omitempty"`
-	  // +optional
+    // +optional
     MaxDuration *metav1.Duration `json:"maxDuration,omitempty"`
 
-	  // +optional
+    // +optional
     AllowedDNSNames *[]string `json:"allowedDNSNames,omitempty"`
 
-	  // +optional
+    // +optional
     AllowedIPAddresses *[]string `json:"allowedIPAddresses,omitempty"`
 
-	  // +optional
+    // +optional
     AllowedURIs *[]string `json:"allowedURIs,omitempty"`
 
-	  // +optional
+    // +optional
     AllowedEmailAddresses *[]string `json:"allowedEmailAddresses,omitempty"`
 
-	  // +optional
-    AllowedIssuer *cmmeta.ObjectReference `json:"allowedIssuer,omitempty"`
+    // +optional
+    AllowedIssuers *[]cmmeta.ObjectReference `json:"allowedIssuer,omitempty"`
 
-	  // +optional
+    // +optional
     AllowedIsCA *bool `json:"allowedIsCA,omitempty"`
 
-	  // +optional
+    // +optional
     AllowedUsages *[]cmapi.KeyUsage `json:"allowedUsages,omitempty"`
 
-	  // +optional
+    // +optional
     AllowedPrivateKey *PolicyPrivateKey `json:"allowedPrivateKey,omitempty"`
 
-	  // +optional
+    // +optional
     ExternalPolicyServers []string `json:"externalPolicyServers,omitempty"`
 }
 
 type PolicyX509Subject struct {
-	  // +optional
+    // +optional
     AllowedOrganizations *[]string `json:"allowedOrganizations,omitempty"`
-	  // +optional
+    // +optional
     AllowedCountries *[]string `json:"allowedCountries,omitempty"`
-	  // +optional
+    // +optional
     AllowedOrganizationalUnits *[]string
-	  // +optional
+    // +optional
     AllowedLocalities *[]string `json:"allowedLocalities,omitempty"`
-	  // +optional
+    // +optional
     AllowedProvinces *[]string `json:"allowedProvinces,omitempty"`
-	  // +optional
+    // +optional
     AllowedStreetAddresses *[]string `json:"allowedStreetAddresses,omitempty"`
-	  // +optional
+    // +optional
     AllowedPostalCodes *[]string `json:"allowedPostalCodes,omitempty"`
-	  // +optional
+    // +optional
     AllowedSerialNumber *string `json:"allowedSerialNumber,omitempty"`
 }
 
 type CertificateRequestPolicyPrivateKey struct {
-	  // +optional
+    // +optional
     AllowedRotationPolicy *cmapi.PrivateKeyRotationPolicy `json:"allowedRotationPolicy,omitempty"`
-	  // +optional
+    // +optional
     AllowedEncoding *cmapi.PrivateKeyEncoding `json:"allowedEncoding,omitempty"`
-	  // +optional
+    // +optional
     AllowedAlgorithm *cmapi.PrivateKeyAlgorithm `json:"allowedAlgorithm,omitempty"`
 
     // Values are inclusive (i.e. a min value with 2048 will accept a size of
     // 2048). MinSize and MaxSize may be the same.
-	  // +optional
+    // +optional
     MinSize int `json:"allowedMinSize,omitempty"`
-	  // +optional
+    // +optional
     MaxSize int `json:"allowedMaxSize,omitempty"`
 }
 
 type CertificateRequestPolicyStatus struct {
-	// +optional
-	Conditions []CertificateRequestPolicyCondition `json:"conditions,omitempty"`
+    // +optional
+	  Conditions []CertificateRequestPolicyCondition `json:"conditions,omitempty"`
 }
 
 type CertificateRequestPolicyCondition struct {
@@ -324,7 +324,7 @@ type ExternalPolicyServer struct {
 
     Spec ExternalPolicyServerSpec `json:"spec"`
 
-	  // +optional
+    // +optional
     Status ExternalPolicyServerStatus `json:"status"`
 }
 
@@ -338,24 +338,24 @@ type ExternalPolicyServerList struct {
 type ExternalPolicyServerSpec struct {
     Endpoint string `json:"endpoint"`
 
-    //+optional
+    // +optional
     CABundle *CABundle `json:"caBundle,omitempty"`
 }
 
 type CABundle struct {
-    //+optional
+    // +optional
     Data         *[]byte `json:"data,omitempty"`
 
-    //+optional
+    // +optional
     ConfigMapRef *cmmeta.ObjectReference `json:"configMapRef,omitempty"`
 
-    //+optional
+    // +optional
     SecretRef *cmmeta.ObjectReference `json:"secretRef,omitempty"`
 }
 
 type ExternalPolicyServerStatus struct {
-	// +optional
-	Conditions []ExternalPolicyServerCondition `json:"conditions,omitempty"`
+    // +optional
+	  Conditions []ExternalPolicyServerCondition `json:"conditions,omitempty"`
 }
 
 type ExternalPolicyServerCondition struct {
@@ -475,7 +475,11 @@ URI names may be present.
     allowedCommonName: ""
     allowedDNSNames: []
     allowedIPAddresses: []
-    allowedURIs: "*.svc.<trust domain>
+    allowedURIs: "*.svc.<trust domain>"
+    allowedIssuers:
+    - name: istio-ca
+      type: Issuer
+      group: cert-manager.io
 ```
 
 Another step would be to create an external policy server that would validate
@@ -500,3 +504,6 @@ well-known type that this policy server observes. Once this condition is
 present, return an approved response. Since an update to the status condition
 will cause an immediate re-sync, the policy check will be immediately
 re-evaluated and the external policy server will approve.
+
+A helper kubectl plugin CLI can be created to make approving certificates easier
+for certificate administrators.
