Updates doc to use updated/correct APIs
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20210302.certificate-request-policy.md
+++ b/design/20210302.certificate-request-policy.md
@@ -102,125 +102,128 @@ time. The status condition is primarily used for exposing the status of the
 external policy servers, which are periodically checked.
 
 ```go
+// +genclient
+// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
+// +kubebuilder:storageversion
+
+// +k8s:openapi-gen=true
 type CertificateRequestPolicy struct {
-    metav1.TypeMeta   `json:",inline"`
-    metav1.ObjectMeta `json:"metadata,omitempty"`
+  metav1.TypeMeta   `json:",inline"`
+  metav1.ObjectMeta `json:"metadata,omitempty"`
 
-    Spec CertificatePolicySpec `json:"spec"`
+  Spec CertificateRequestPolicySpec `json:"spec"`
 
-    // +optional
-    Status CertificatePolicyStatus `json:"status"`
+  // +optional
+  Status CertificateRequestPolicyStatus `json:"status"`
 }
 
-type CertificateRequestPolicyList struct {
-    metav1.TypeMeta `json:",inline"`
-    metav1.ListMeta `json:"metadata"`
+// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
 
-    Items []Policy `json:"items"`
+type CertificateRequestPolicyList struct {
+  metav1.TypeMeta `json:",inline"`
+  metav1.ListMeta `json:"metadata"`
+
+  Items []CertificateRequestPolicy `json:"items"`
 }
 
 type CertificateRequestPolicySpec struct {
-    // +optional
-    AllowedSubject *PolicyX509Subject `json:"allowedSubject,omitempty"`
+  // +optional
+  AllowedSubject *PolicyX509Subject `json:"allowedSubject,omitempty"`
 
-    // +optional
-    AllowedCommonName *string `json:"subject,omitempty"`
+  // +optional
+  AllowedCommonName *string `json:"subject,omitempty"`
 
-    // Values are inclusive (i.e. a min value with 50s will accept a duration
-    // with 50s). MinDuration and MaxDuration may be the same.
-    // +optional
-    MinDuration *metav1.Duration `json:"minDuration,omitempty"`
-    // +optional
-    MaxDuration *metav1.Duration `json:"maxDuration,omitempty"`
+  // Values are inclusive (i.e. a min value with 50s will accept a duration
+  // with 50s). MinDuration and MaxDuration may be the same.
+  // +optional
+  MinDuration *metav1.Duration `json:"minDuration,omitempty"`
+  // +optional
+  MaxDuration *metav1.Duration `json:"maxDuration,omitempty"`
 
-    // +optional
-    AllowedDNSNames *[]string `json:"allowedDNSNames,omitempty"`
+  // +optional
+  AllowedDNSNames *[]string `json:"allowedDNSNames,omitempty"`
 
-    // +optional
-    AllowedIPAddresses *[]string `json:"allowedIPAddresses,omitempty"`
+  // +optional
+  AllowedIPAddresses *[]string `json:"allowedIPAddresses,omitempty"`
 
-    // +optional
-    AllowedURIs *[]string `json:"allowedURIs,omitempty"`
+  // +optional
+  AllowedURIs *[]string `json:"allowedURIs,omitempty"`
 
-    // +optional
-    AllowedEmailAddresses *[]string `json:"allowedEmailAddresses,omitempty"`
+  // +optional
+  AllowedEmailAddresses *[]string `json:"allowedEmailAddresses,omitempty"`
 
-    // +optional
-    AllowedIssuers *[]cmmeta.ObjectReference `json:"allowedIssuer,omitempty"`
+  // +optional
+  AllowedIssuers *[]cmmeta.ObjectReference `json:"allowedIssuer,omitempty"`
 
-    // +optional
-    AllowedIsCA *bool `json:"allowedIsCA,omitempty"`
+  // +optional
+  AllowedIsCA *bool `json:"allowedIsCA,omitempty"`
 
-    // +optional
-    AllowedUsages *[]cmapi.KeyUsage `json:"allowedUsages,omitempty"`
+  // +optional
+  AllowedUsages *[]cmapi.KeyUsage `json:"allowedUsages,omitempty"`
 
-    // +optional
-    AllowedPrivateKey *PolicyPrivateKey `json:"allowedPrivateKey,omitempty"`
+  // +optional
+  AllowedPrivateKey *PolicyPrivateKey `json:"allowedPrivateKey,omitempty"`
 
-    // +optional
-    ExternalPolicyServers []string `json:"externalPolicyServers,omitempty"`
+  // +optional
+  ExternalPolicyServers []string `json:"externalPolicyServers,omitempty"`
 }
 
 type PolicyX509Subject struct {
-    // +optional
-    AllowedOrganizations *[]string `json:"allowedOrganizations,omitempty"`
-    // +optional
-    AllowedCountries *[]string `json:"allowedCountries,omitempty"`
-    // +optional
-    AllowedOrganizationalUnits *[]string
-    // +optional
-    AllowedLocalities *[]string `json:"allowedLocalities,omitempty"`
-    // +optional
-    AllowedProvinces *[]string `json:"allowedProvinces,omitempty"`
-    // +optional
-    AllowedStreetAddresses *[]string `json:"allowedStreetAddresses,omitempty"`
-    // +optional
-    AllowedPostalCodes *[]string `json:"allowedPostalCodes,omitempty"`
-    // +optional
-    AllowedSerialNumber *string `json:"allowedSerialNumber,omitempty"`
+  // +optional
+  AllowedOrganizations *[]string `json:"allowedOrganizations,omitempty"`
+  // +optional
+  AllowedCountries *[]string `json:"allowedCountries,omitempty"`
+  // +optional
+  AllowedOrganizationalUnits *[]string `json:"allowedOrganizationalUnits,omitempty"`
+  // +optional
+  AllowedLocalities *[]string `json:"allowedLocalities,omitempty"`
+  // +optional
+  AllowedProvinces *[]string `json:"allowedProvinces,omitempty"`
+  // +optional
+  AllowedStreetAddresses *[]string `json:"allowedStreetAddresses,omitempty"`
+  // +optional
+  AllowedPostalCodes *[]string `json:"allowedPostalCodes,omitempty"`
+  // +optional
+  AllowedSerialNumber *string `json:"allowedSerialNumber,omitempty"`
 }
 
-type CertificateRequestPolicyPrivateKey struct {
-    // +optional
-    AllowedRotationPolicy *cmapi.PrivateKeyRotationPolicy `json:"allowedRotationPolicy,omitempty"`
-    // +optional
-    AllowedEncoding *cmapi.PrivateKeyEncoding `json:"allowedEncoding,omitempty"`
-    // +optional
-    AllowedAlgorithm *cmapi.PrivateKeyAlgorithm `json:"allowedAlgorithm,omitempty"`
+type PolicyPrivateKey struct {
+  // +optional
+  AllowedAlgorithm *cmapi.PrivateKeyAlgorithm `json:"allowedAlgorithm,omitempty"`
 
-    // Values are inclusive (i.e. a min value with 2048 will accept a size of
-    // 2048). MinSize and MaxSize may be the same.
-    // +optional
-    MinSize int `json:"allowedMinSize,omitempty"`
-    // +optional
-    MaxSize int `json:"allowedMaxSize,omitempty"`
+  // Values are inclusive (i.e. a min value with 2048 will accept a size of
+  // 2048). MinSize and MaxSize may be the same.
+  // +optional
+  MinSize *int `json:"allowedMinSize,omitempty"`
+  // +optional
+  MaxSize *int `json:"allowedMaxSize,omitempty"`
 }
 
 type CertificateRequestPolicyStatus struct {
-    // +optional
-	  Conditions []CertificateRequestPolicyCondition `json:"conditions,omitempty"`
+  // +optional
+  Conditions []CertificateRequestPolicyCondition `json:"conditions,omitempty"`
 }
 
 type CertificateRequestPolicyCondition struct {
-    Type CertificateRequestPolicyConditionType `json:"type"`
-    Status cmmeta.ConditionStatus `json:"status"`
+  Type   CertificateRequestPolicyConditionType `json:"type"`
+  Status cmmeta.ConditionStatus                `json:"status"`
 
-    // +optional
-    LastTransitionTime *metav1.Time `json:"lastTransitionTime,omitempty"`
+  // +optional
+  LastTransitionTime *metav1.Time `json:"lastTransitionTime,omitempty"`
 
-    // +optional
-    Reason string `json:"reason,omitempty"`
+  // +optional
+  Reason string `json:"reason,omitempty"`
 
-    // +optional
-    Message string `json:"message,omitempty"`
+  // +optional
+  Message string `json:"message,omitempty"`
 
-    ObservedGeneration int64 `json:"observedGeneration,omitempty"`
+  ObservedGeneration int64 `json:"observedGeneration,omitempty"`
 }
 
 type CertificateRequestPolicyConditionType string
 
 const (
-    CertificateRequestPolicyConditionReady CertificateRequestPolicyConditionType = "Ready"
+  CertificateRequestPolicyConditionReady CertificateRequestPolicyConditionType = "Ready"
 )
 ```
 
