Adds yaml demos to design doc use cases
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20210302.certificate-request-policy.md
+++ b/design/20210302.certificate-request-policy.md
@@ -8,7 +8,7 @@ approvers:
   - "@cert-manager-dev"
 editor: "@joshvanl"
 creation-date: 2021-03-02
-last-updated: 2021-03-02
+last-updated: 2021-03-09
 status: provisional
 ---
 
@@ -453,6 +453,39 @@ don't want to deploy a namespaced issuer to each of those namespaces.*
 Create a RoleBinding to each namespace to a role which includes an allow-all
 CertificateRequestPolicy.
 
+```yaml
+apiVersion: policy.cert-manager/v1alpha1
+kind: CertificateRequestPolicy
+metadata:
+  name: allow-all
+spec:
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: cert-manager-policy-allow-all
+  namespace: foo
+rules:
+  - apiGroups: ["policy.cert-manager.io"]
+    resources: ["certificaterequestpolicy"]
+    verbs: ["use"]
+    resourceNames: ["allow-all"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: cert-manager-policy-allow-all
+  namespace: foo-bar
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: cert-manager-policy-allow-all
+subjects:
+- kind: User
+  name: jane
+  apiGroup: rbac.authorization.k8s.io
+```
+
 
 ### Case 2
 
@@ -462,6 +495,40 @@ Create a CertificateRequestPolicy for each domain required, and bind these
 using RBAC to those particular identity. Alternatively, create an external
 policy server which maps these identities to domains bespoke, and bind a
 single CertificateRequestPolicy to everyone that includes this server.
+
+```yaml
+apiVersion: policy.cert-manager/v1alpha1
+kind: CertificateRequestPolicy
+metadata:
+  name: domain-specific
+spec:
+  allowedDNSNames:
+  - example.com
+  - foo.bar.co.uk
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: cert-manager-certificaterequestpolicy-domain-specific
+rules:
+  - apiGroups: ["policy.cert-manager.io"]
+    resources: ["certificaterequestpolicy"]
+    verbs: ["use"]
+    resourceNames: ["domain-specific"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: cert-manager-certificaterequestpolicy-domain-specific
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cert-manager-certificaterequestpolicy-domain-specific
+subjects:
+- kind: User
+  name: jane
+  apiGroup: rbac.authorization.k8s.io
+```
 
 ### Case 4
 
@@ -475,14 +542,57 @@ account in the istio-system namespace. This policy will enforce that only the
 URI names may be present.
 
 ```yaml
-    allowedCommonName: ""
-    allowedDNSNames: []
-    allowedIPAddresses: []
-    allowedURIs: "*.svc.<trust domain>"
-    allowedIssuers:
-    - name: istio-ca
-      type: Issuer
-      group: cert-manager.io
+apiVersion: policy.cert-manager/v1alpha1
+kind: ExternalPolicyServer
+metadata:
+  name: istio-csr
+spec:
+  endpoint: cert-manager-istio-csr-policy.cert-manager
+  caBundle:
+    configMapRef:
+      name: cert-manager-istio-csr-policy-tls
+      key: ca.tls
+---
+apiVersion: policy.cert-manager/v1alpha1
+kind: CertificateRequestPolicy
+metadata:
+  name: allow-all
+spec:
+  allowedCommonName: ""
+  allowedDNSNames: []
+  allowedIPAddresses: []
+  allowedURIs: "*.svc.<trust domain>"
+  allowedIssuers:
+  - name: istio-ca
+    type: Issuer
+    group: cert-manager.io
+  externalPolicyServers:
+  - istio-csr
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: cert-manager-istio-csr:cert-manager-certificaterequestpolicy
+  namespace: istio-system
+rules:
+  - apiGroups: ["policy.cert-manager.io"]
+    resources: ["certificaterequestpolicy"]
+    verbs: ["use"]
+    resourceNames: ["cert-manager-istio-csr"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: cert-manager-istio-csr:cert-manager-certificaterequestpolicy
+  namespace: istio-system
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: cert-manager-istio-csr
+subjects:
+- kind: ServiceAccount
+  name: cert-manager-istio-csr
+  namespace: istio-system
 ```
 
 Another step would be to create an external policy server that would validate
@@ -497,6 +607,57 @@ CertificateRequest.
 Create an external policy server to enforce SPIFFE certificates based on the
 user info fields.
 
+```yaml
+apiVersion: policy.cert-manager/v1alpha1
+kind: ExternalPolicyServer
+metadata:
+  name: spiffe
+  annotations:
+    cert-manager.io/inject-ca-from: spiffe-policy
+spec:
+  endpoint: cert-manager-spiffe-policy.cert-manager
+  caBundle:
+    data: foobar
+---
+apiVersion: policy.cert-manager/v1alpha1
+kind: CertificateRequestPolicy
+metadata:
+  name: csi-spiffe
+spec:
+  allowedURIs: "*.svc.cluster-1"
+  allowedDNSNames: []
+  allowedIPAddresses: []
+  allowedIssuers:
+  - name: spiffe
+    type: ClusterIssuer
+    group: cert-manager.io
+  externalPolicyServers:
+  - spiffe
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: csi-spiffe
+rules:
+  - apiGroups: ["policy.cert-manager.io"]
+    resources: ["certificaterequestpolicy"]
+    verbs: ["use"]
+    resourceNames: ["csi-spiffe"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: csi-spiffe
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: csi-spiffe
+subjects:
+- kind: Group
+  name: system:authenticated
+  apiGroup: rbac.authorization.k8s.io
+```
+
 ### Case 6
 
 *Manual approval of certificates*
@@ -510,3 +671,53 @@ re-evaluated and the external policy server will approve.
 
 A helper kubectl plugin CLI can be created to make approving certificates easier
 for certificate administrators.
+
+```yaml
+apiVersion: policy.cert-manager/v1alpha1
+kind: ExternalPolicyServer
+metadata:
+  name: manual
+spec:
+  endpoint: manual-approval-policy.cert-manager
+  secretRef:
+    name: manual-approval-tls
+    key: ca.tls
+---
+apiVersion: policy.cert-manager/v1alpha1
+kind: CertificateRequestPolicy
+metadata:
+  name: manual-approval
+spec:
+  allowedDNSNames: ["example.com", "*.example.com"]
+  allowedURIs: []
+  allowedIPAddresses: []
+  externalPolicyServers:
+  - manual
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: cert-manager-certificaterequestpolicy:manual-approval
+rules:
+  - apiGroups: ["policy.cert-manager.io"]
+    resources: ["certificaterequestpolicy"]
+    verbs: ["use"]
+    resourceNames: ["manual-approval"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: cert-manager-certificaterequestpolicy:manual-approval
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cert-manager-certificaterequestpolicy:manual-approval
+subjects:
+- kind: Group
+  name: system:authenticated
+  apiGroup: rbac.authorization.k8s.io
+```
+
+```bash
+kubectl manual-approve foo -n bar
+```
