Adds comment about where the CA data came from in ExternalPolicyServer
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20210302.certificate-request-policy.md
+++ b/design/20210302.certificate-request-policy.md
@@ -617,6 +617,7 @@ metadata:
 spec:
   endpoint: cert-manager-spiffe-policy.cert-manager
   caBundle:
+    # Populated from spiffe-policy Certificate by ca-injector
     data: foobar
 ---
 apiVersion: policy.cert-manager/v1alpha1
