Change user info field design satus to implemented
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/design/20210203.certificate-request-identity.md
+++ b/design/20210203.certificate-request-identity.md
@@ -9,7 +9,7 @@ approvers:
 editor: "@joshvanl"
 creation-date: 2021-02-03
 last-updated: 2021-02-03
-status: provisional
+status: implemented
 ---
 
 # Identity
